<resources>
    <string name="app_name">Достигну цели!</string>
    <string name="goal_text_q">Описание твоей цели</string>
    <string name="goal_text">Описание цели</string>
    <string name="goal_name_q">Название твоей цели</string>
    <string name="goal_name">Название цели</string>
    <string name="goal_completed">Цель достигнута!</string>
    <string name="fin_goal_completed">Финансовая цель достигнута!</string>
    <string name="goal_amount_q">Сколько хочешь накопить? :)</string>
    <string name="goal_current_amount_q">Сколько уже накоплено? :)</string>
    <string name="goal_progress">Прогресс</string>
    <string name="goal_current_amount">Накоплено</string>
    <string name="goal">Цель</string>
    <string name="goal_type">Тип цели (Финансовая/Другая)</string>
    <string name="create_goal">Создать цель</string>
    <string name="create_task">Добавить задание</string>
    <string name="delete_task">Удалить задание</string>
    <string name="task_completed">Выполнено</string>
    <string name="this_task_completed">Задание выполнено!</string>
    <string name="complete_task_amount_q">Награда за выполнение (₽)</string>
    <string name="complete_task_percents_q">Прогресс при выполнении (%)</string>
    <string name="task_text_q">Опиши задание</string>
    <string name="choose_goal_like_main">Выбрать цель главной</string>
    <string name="task_text">Описание задания</string>
    <string name="goals">Цели</string>
    <string name="delete_goal">Удалить цель</string>
    <string name="my_goals">Мои цели</string>
    <string name="go_back">Вернуться</string>
    <string name="go_back_and_save">Сохранить и вернуться</string>
    <string name="current_goal_progress_rub">Текущий финансовый прогресс (₽)</string>
    <string name="current_goal_progress_perc">Текущий прогресс (%)</string>
    <string name="main_goal_call">Создай цель и выбери ее в качестве главной! У тебя получится!</string>
    <string name="tasks">Задания</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="task">Задание</string>
    <string name="delete">Удалить</string>
    <string name="confirm">Подтвердить</string>
    <string name="fin_goal">Финансовая цель</string>
    <string name="plus_100">+100</string>
    <string name="minas_100">-100</string>
</resources>