<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".activity.CreateTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/saveButton"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/taskTextRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_task"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskDescriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:hint="@string/task_text"
                    android:textSize="17sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskAwardTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/complete_task_percents_q"
                    android:textSize="17sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/purple_for_ui"
        android:layout_above="@id/goBackButton"
        android:textColor="@color/light_purple"
        />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/go_back"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/light_purple"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>