<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="155dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/purple_for_ui"
    android:layout_marginBottom="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_above="@id/taskCompletedLinearLayout"
            android:layout_toStartOf="@id/taskAmountCardView"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            >

            <TextView
                android:id="@+id/taskTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_text"
                android:textColor="@color/light_purple"
                android:textSize="30sp"
                android:textStyle="bold"
                />


        </ScrollView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/taskAmountCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/purple_for_ui"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/taskAmountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_purple"
                    android:text="-- %"
                    android:textSize="30sp"
                    />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/taskCompletedLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/taskCompletedButton"
                app:cornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/light_purple"
                android:text="@string/task_completed"
                android:textSize="20sp"
                android:backgroundTint="@color/success"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/taskCompletedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_task_completed"
                android:textColor="@color/success"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="3dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="right"
                android:visibility="gone"
                />

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>